[package]
name = "lycan-serialize"
version = "0.1.1"
authors = ["Vaelden <maugan.villatel@gmail.com>"]
build = "build.rs"

[build-dependencies]
capnpc = "=0.6.0"

[dependencies]
capnp = "=0.6.2"
log = "*"
byteorder = "*"

[features]
# Use JSON as serialization format instead of CapnProto
json = ["rustc-serialize"]
default = ["json"]

[dependencies.rustc-serialize]
version = "*"
optional = true
